@@ -27,26 +27,16 @@ import org.egov.tracer.config.ObjectMapperFactory;
 import org.egov.tracer.config.TracerProperties;
 import org.slf4j.MDC;
 import org.springframework.http.MediaType;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
-
-import javax.servlet.*;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.util.*;
-import java.util.regex.Pattern;
-
-import static java.util.Objects.isNull;
-import static org.egov.tracer.constants.TracerConstants.*;
-import static org.springframework.util.StringUtils.isEmpty;
 
 @Slf4j
 public class TracerFilter implements Filter {
 
     private static final List<String> JSON_MEDIA_TYPES =
-        Arrays.asList(MediaType.APPLICATION_JSON_UTF8_VALUE, MediaType.APPLICATION_JSON_VALUE);
+            Arrays.asList(MediaType.APPLICATION_JSON_VALUE);
     private static final String POST = "POST";
     private static final String REQUEST_BODY_LOG_MESSAGE = "Request body - {}";
     private static final String FAILED_TO_LOG_REQUEST_MESSAGE = "Failed to log request body";
@@ -63,7 +53,7 @@ public class TracerFilter implements Filter {
         this.tracerProperties = tracerProperties;
         this.objectMapper = objectMapperFactory.getObjectMapper();
         this.skipPattern = isNull(tracerProperties.getFilterSkipPattern()) ? null :
-            Pattern.compile(tracerProperties.getFilterSkipPattern());
+                Pattern.compile(tracerProperties.getFilterSkipPattern());
     }
 
     @Override
@@ -91,18 +81,19 @@ public class TracerFilter implements Filter {
     @Override
     public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain)
         throws IOException, ServletException {
-        String correlationId = null;
         HttpServletRequest httpRequest = (HttpServletRequest) servletRequest;
 
         if (!this.isTraced(httpRequest)) {
             filterChain.doFilter(httpRequest, servletResponse);
-        }
-        else {
+        } else {
 
             if (isBodyCompatibleForParsing(httpRequest)) {
                 final MultiReadRequestWrapper wrappedRequest = new MultiReadRequestWrapper(httpRequest);
-                correlationId = getCorrelationId(wrappedRequest);
-                MDC.put(CORRELATION_ID_MDC, correlationId);
+
+                Map<String, String> headerParamMap = getCorrelationId(wrappedRequest);
+                MDC.put(CORRELATION_ID_MDC, headerParamMap.get(CORRELATION_ID_MDC));
+                MDC.put(TENANTID_MDC, headerParamMap.get(TENANTID_MDC));
+
                 logRequestURI(httpRequest);
 
                 if (tracerProperties.isRequestLoggingEnabled()) {
@@ -112,8 +103,10 @@ public class TracerFilter implements Filter {
                 filterChain.doFilter(wrappedRequest, servletResponse);
 
             } else {
-                correlationId = getCorrelationId(httpRequest);
-                MDC.put(CORRELATION_ID_MDC, correlationId);
+                
+            	  Map<String, String> headerParamMap = getCorrelationId(httpRequest);
+                MDC.put(CORRELATION_ID_MDC, headerParamMap.get(CORRELATION_ID_MDC));
+                MDC.put(TENANTID_MDC, headerParamMap.get(TENANTID_MDC));
                 logRequestURI(httpRequest);
                 filterChain.doFilter(httpRequest, servletResponse);
             }
@@ -146,19 +139,11 @@ public class TracerFilter implements Filter {
         log.info(REQUEST_URI_LOG_MESSAGE, url);
     }
 
-    private String getCorrelationId(HttpServletRequest httpRequest) {
-        String correlationId = getCorrelationIdFromHeader(httpRequest);
 
-        if (isNull(correlationId) && httpRequest instanceof MultiReadRequestWrapper) {
-            correlationId = getCorrelationIdFromBody(httpRequest);
-        }
+	private Map<String, String> getCorrelationId(HttpServletRequest httpRequest) {
+		return getParamMapFromHeader(httpRequest);
 
-        if(isNull(correlationId))
-            correlationId = getRandomCorrelationId();
-
-        return correlationId;
-
-    }
+	}
 
     private boolean isBodyCompatibleForParsing(HttpServletRequest httpRequest) {
         return POST.equals(httpRequest.getMethod())
@@ -168,7 +153,9 @@ public class TracerFilter implements Filter {
 
     private void logRequestBodyAndParams(HttpServletRequest requestWrapper) {
         try {
-            final String requestBody = IOUtils.toString(requestWrapper.getInputStream(), UTF_8);
+            //final String requestBody = IOUtils.toString(requestWrapper.getInputStream(), UTF_8);
+            final ServletInputStream inputStream = requestWrapper.getInputStream();
+            String requestBody = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
             String requestParams = requestWrapper.getQueryString();
 
             if(!isEmpty(requestParams))
@@ -182,10 +169,23 @@ public class TracerFilter implements Filter {
         }
     }
 
-    private String getCorrelationIdFromHeader(HttpServletRequest httpRequest) {
-        return httpRequest.getHeader(CORRELATION_ID_HEADER);
-    }
 
+	private Map<String, String> getParamMapFromHeader(HttpServletRequest httpRequest) {
+
+		Map<String, String> keyMap = new HashMap<>();
+		String correlationId = httpRequest.getHeader(CORRELATION_ID_HEADER);
+
+		if (isNull(correlationId) && httpRequest instanceof MultiReadRequestWrapper) {
+			correlationId = getCorrelationIdFromBody(httpRequest);
+		}
+
+		if (isNull(correlationId))
+			correlationId = getRandomCorrelationId();
+
+		keyMap.put(CORRELATION_ID_MDC, correlationId);
+		keyMap.put(TENANTID_MDC, httpRequest.getHeader(TENANT_ID_HEADER));
+		return keyMap;
+	}
 
     @SuppressWarnings("unchecked")
     private String getCorrelationIdFromBody(HttpServletRequest httpServletRequest) {
